<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokerCounter</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="small_blind">SB</string>
    <string name="big_blind">BB</string>
    <string name="time">Time</string>
    <string name="next_level">Next</string>
    <string name="start_txt">Start</string>
    <string name="restart_txt">Restart</string>
    <string name="pause_txt">Pause</string>
    <string name="continue_txt">Continue</string>
    <string name="level_finished">Level Finished</string>
    <string name="level_finished_ext">The actual level is finished</string>
    <string name="blinds_counter_label">Blinds Counter</string>
    <string name="big_blind_lbl">BB:</string>
    <string name="small_blind_lbl">SB:</string>
    <string name="no_more_levels_msg">There are no more levels</string>
    <string name="add_level">Add new level</string>
    <string name="return_lbl">Return</string>
    <string name="oops_lbl">Oops! :(</string>
    <string name="finish_lbl">Finish</string>
    <string name="cancel_lbl">cancel</string>
    <string name="input_empty">This field is required</string>
    <string name="minutes_lbl">Minutes:</string>

</resources>
