<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pokercounter.MainActivity$PlaceholderFragment" >

    <com.devadvance.circularseekbar.CircularSeekBar
        android:id="@+id/levelProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:start_angle="-180"
        app:end_angle="0"
        app:pointer_alpha_ontouch="100"
        app:pointer_radius="0"
        app:pointer_halo_width="0"
        app:circle_progress_color="RED"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/digitalClock1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Loading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/startPauseButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digitalClock1"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@+id/digitalClock1"
        android:text="Button1"/>

    <Button
        android:id="@+id/nextLevelButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digitalClock1"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/digitalClock1"
        android:text="@string/next_level" />



    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/startPauseButt"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/blinds_table"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/small_blind"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/big_blind"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>